refactor: limpeza de código morto e melhoria de legibilidade geral