@@ -5,6 +5,7 @@ import com.leomar.gerenciador_campeonatos.model.*;
 import com.leomar.gerenciador_campeonatos.repository.ResultadoBateriaRepository;
 import com.leomar.gerenciador_campeonatos.repository.TabelaPontuacaoRepository;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.util.*;
 import java.util.stream.Collectors;
@@ -20,79 +21,86 @@ public class PontuacaoService {
         this.tabelaRepository = tabelaRepository;
     }
 
+    /**
+     * Calcula os pontos de cada piloto em uma bateria específica baseado em sua categoria.
+     */
+    @Transactional
     public void calcularPontosDaBateria(Long bateriaId, Long tabelaId) {
         TabelaPontuacao tabela = tabelaRepository.findById(tabelaId)
-                .orElseThrow(() -> new RuntimeException("Tabela não encontrada"));
+                .orElseThrow(() -> new NoSuchElementException("Tabela de pontuação não encontrada: ID " + tabelaId));
 
         List<ResultadoBateria> gridGeral = resultadoRepository.findByBateriaIdOrderByPosicaoChegadaAsc(bateriaId);
-        Map<Categoria, List<ResultadoBateria>> separadosPorCategoria = gridGeral.stream()
+        
+        // Agrupa por categoria para que a posição seja relativa aos concorrentes diretos
+        Map<Categoria, List<ResultadoBateria>> resultadosPorCategoria = gridGeral.stream()
                 .collect(Collectors.groupingBy(resultado -> resultado.getPiloto().getCategoria()));
 
-        for (List<ResultadoBateria> resultadosDaSubcategoria : separadosPorCategoria.values()) {
-            for (int i = 0; i < resultadosDaSubcategoria.size(); i++) {
-                ResultadoBateria resultado = resultadosDaSubcategoria.get(i);
+        resultadosPorCategoria.values().forEach(resultados -> atribuirPontosPorCategoria(resultados, tabela));
 
-                // SE ELE NÃO COMPLETOU (NC), GANHA 0 PONTOS DIRETO.
-                if (resultado.isNc()) {
-                    resultado.setPontos(0);
-                } else {
-                    int posicaoNaCategoria = i + 1;
-                    Integer pontos = tabela.getPontosPorPosicao().getOrDefault(posicaoNaCategoria, 0);
-                    resultado.setPontos(pontos);
-                }
-            }
-        }
         resultadoRepository.saveAll(gridGeral);
     }
 
-    public Map<String, List<ClassificacaoDTO>> gerarRelatorioFinalSelecionado(List<Long> bateriaIds) {
-        List<ResultadoBateria> resultadosSelecionados = resultadoRepository.findByBateriaIdIn(bateriaIds);
-
-        Map<Categoria, List<ResultadoBateria>> resultadosPorCategoria = resultadosSelecionados.stream()
-                .collect(Collectors.groupingBy(r -> r.getPiloto().getCategoria()));
-
-        Map<String, List<ClassificacaoDTO>> relatorioFinal = new LinkedHashMap<>();
-
-        for (Map.Entry<Categoria, List<ResultadoBateria>> entry : resultadosPorCategoria.entrySet()) {
-            Categoria categoria = entry.getKey();
-            List<ResultadoBateria> resultadosDaCategoria = entry.getValue();
-
-            // Agrupa os resultados pelo Piloto
-            Map<Piloto, List<ResultadoBateria>> resultadosPorPiloto = resultadosDaCategoria.stream()
-                    .collect(Collectors.groupingBy(ResultadoBateria::getPiloto));
-
-            List<ClassificacaoDTO> podio = new ArrayList<>();
-
-            for (Map.Entry<Piloto, List<ResultadoBateria>> pilotoEntry : resultadosPorPiloto.entrySet()) {
-                Piloto piloto = pilotoEntry.getKey();
-                List<ResultadoBateria> resultadosDoPiloto = pilotoEntry.getValue();
-
-                ClassificacaoDTO dto = new ClassificacaoDTO();
-                dto.setPiloto(piloto);
-
-                int total = 0;
-                for (ResultadoBateria r : resultadosDoPiloto) {
-                    int pontos = (r.getPontos() != null) ? r.getPontos() : 0;
-                    total += pontos;
-
-                    // Guarda se foi NC ou os pontos normais com o nome da bateria
-                    String valorExibicao = r.isNc() ? "NC" : String.valueOf(pontos);
-                    dto.getResultadosPorBateria().put(r.getBateria().getNome(), valorExibicao);
-                }
-
-                dto.setTotalPontos(total);
-                podio.add(dto);
+    private void atribuirPontosPorCategoria(List<ResultadoBateria> resultados, TabelaPontuacao tabela) {
+        for (int i = 0; i < resultados.size(); i++) {
+            ResultadoBateria resultado = resultados.get(i);
+            
+            if (resultado.isNc()) {
+                resultado.setPontos(0);
+                continue;
             }
 
-            podio.sort((a, b) -> b.getTotalPontos().compareTo(a.getTotalPontos()));
-            relatorioFinal.put(categoria.getNome(), podio);
+            int posicaoNaCategoria = i + 1;
+            int pontos = tabela.getPontosPorPosicao().getOrDefault(posicaoNaCategoria, 0);
+            resultado.setPontos(pontos);
         }
-        return relatorioFinal;
+    }
+
+    /**
+     * Consolida os resultados de múltiplas baterias em um ranking por categoria.
+     */
+    public Map<String, List<ClassificacaoDTO>> gerarRelatorioFinalSelecionado(List<Long> bateriaIds) {
+        List<ResultadoBateria> resultados = resultadoRepository.findByBateriaIdIn(bateriaIds);
+
+        return resultados.stream()
+                .collect(Collectors.groupingBy(r -> r.getPiloto().getCategoria()))
+                .entrySet().stream()
+                .collect(Collectors.toMap(
+                        entry -> entry.getKey().getNome(),
+                        entry -> processarClassificacaoCategoria(entry.getValue()),
+                        (v1, v2) -> v1,
+                        LinkedHashMap::new
+                ));
+    }
+
+    private List<ClassificacaoDTO> processarClassificacaoCategoria(List<ResultadoBateria> resultadosCategoria) {
+        Map<Piloto, List<ResultadoBateria>> resultadosPorPiloto = resultadosCategoria.stream()
+                .collect(Collectors.groupingBy(ResultadoBateria::getPiloto));
+
+        return resultadosPorPiloto.entrySet().stream()
+                .map(entry -> criarClassificacaoDTO(entry.getKey(), entry.getValue()))
+                .sorted(Comparator.comparing(ClassificacaoDTO::getTotalPontos).reversed())
+                .collect(Collectors.toList());
+    }
+
+    private ClassificacaoDTO criarClassificacaoDTO(Piloto piloto, List<ResultadoBateria> resultadosDoPiloto) {
+        ClassificacaoDTO dto = new ClassificacaoDTO();
+        dto.setPiloto(piloto);
+        
+        int total = 0;
+        for (ResultadoBateria r : resultadosDoPiloto) {
+            int pontos = (r.getPontos() != null) ? r.getPontos() : 0;
+            total += pontos;
+
+            String valorExibicao = r.isNc() ? "NC" : String.valueOf(pontos);
+            dto.getResultadosPorBateria().put(r.getBateria().getNome(), valorExibicao);
+        }
+
+        dto.setTotalPontos(total);
+        return dto;
     }
 
     public List<ClassificacaoDTO> gerarClassificacaoFinal(Long id) {
-        // Retorna uma lista vazia apenas para satisfazer o Java e não quebrar rotas antigas.
-        // O nosso sistema agora usa o gerarRelatorioFinalSelecionado!
-        return Collections.emptyList();
+        return List.of();
     }
+
 }
